--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>歡迎使用Yan's DBMS</title>
+		<title>2020 漫博會參展資料庫</title>
 		<meta content="text/html"; charset="UTF-8" http-equiv="content-type">
 		<link rel="stylesheet" type="text/css" href="style.css" />
 	</head>
 
 	<body>
-		<h1 align="center" class="font_JhengHei">歡迎使用Yan's DBMS</h1>
+		<div align="center"><img src="img/logo.png" width="60%"><img src="img/2020.png" width="10%"></div>
 		<div class="input_div">
 			<form action="index.php" method="POST">
 				<p align="center" valign="center">
