--- a/shoppingmall.html
+++ b/shoppingmall.html
@@ -223,7 +223,9 @@
 					<tr>
 						<td colspan="2">
 							<form id="upload1" method="POST" onsubmit="return false;" align="center">
-								請務必每個格子都要填入<br>
+								1.請務必每個格子都要填入<br>
+								2.不像SQL輸入(INSERT,DELETE,UPDATE)，此處的BUTTON都會顯示結果<br>
+								-------------------------------------------------------------------------------------<br>
 								<div id="D_HIDE"> </div>		
 								<div id="D_SELECT">
 										<!-- <input type="hidden" value="1"> --> 
@@ -232,48 +234,52 @@
 										WHERE <input type="text" name="text3"><br>
 								</div>		
 								<div id="D_DELETE"> 
-										DELETE FROM customer WHERE  <input type="text" name="text4"><br> 
+										DELETE FROM customer WHERE  <input type="text" name="text4">
 								</div>		
 								<div id="D_INSERT"> 
-										INSERT INTO customer <input type="text" name="text5"><br>
-										VALUES <input type="text" name="text6"><br> 														
+										<!--INSERT INTO customer (customer_id , customer_name,customer_email,customer_address) VALUES (15,'栗花落香奈乎','Tsuyuri@gmail.com','高雄市前金區海港路15號')-->
+										參考:INSERT INTO customer (customer_id , customer_name,customer_email,customer_address) VALUES (15,'栗花落香奈乎','Tsuyuri@gmail.com','高雄市前金區海港路15號')<br>
+										INSERT INTO customer <input type="text" name="text5">
+										VALUES <input type="text" name="text6">														
 								</div>		
 								<div id="D_UPDATE"> 
-										UPDATE customers SET <input type="text" name="text7"><br> 
+										<!--UPDATE customer SET customer_name = '真菰' WHERE customer_id = 15-->
+										參考:UPDATE customer SET customer_name = '真菰' WHERE customer_id = 15<br>
+										UPDATE customers SET <input type="text" name="text7">
 										WHERE <input type="text" name="text8"><br>
 								</div>		
 								<div id="D_IN"> 
-										SELECT * FROM customer WHERE customer_id > 3 IN (<input type="text" name="text9"><br>) 
+										SELECT * FROM customer WHERE customer_id > 3 IN (<input type="text" name="text9">) 
 								</div>		
 								<div id="D_NOT_IN">
-										SELECT * FROM customer WHERE customer_id > 4 NOT IN (<input type="text" name="text10"><br>) 
+										SELECT * FROM customer WHERE customer_id > 4 NOT IN (<input type="text" name="text10">) 
 								</div>		
 								<div id="D_EXISTS">
 										參考：SELECT * FROM customer WHERE EXISTS (SELECT * FROM customer WHERE 1) <br>
-										SELECT <input type="text" name="text11"><br>
-										FROM customer WHERE EXISTS (<input type="text" name="text12"><br>) 
+										SELECT <input type="text" name="text11">
+										FROM customer WHERE EXISTS (<input type="text" name="text12">) 
 								</div>		
 								<div id="D_NOT_EXISTS">
-										SELECT <input type="text" name="text13"><br>
-										FROM customer WHERE NOT EXISTS (<input type="text" name="text14"><br>) 
+										SELECT <input type="text" name="text13">
+										FROM customer WHERE NOT EXISTS (<input type="text" name="text14">) 
 								</div>		
 								<div id="D_COUNT">
-										SELECT COUNT(<input type="text" name="text15"><br>)  FROM merchandise
+										SELECT COUNT(<input type="text" name="text15">) FROM merchandise
 								</div>		
 								<div id="D_SUM">
-										SELECT SUM(<input type="text" name="text16"><br>)  FROM merchandise
+										SELECT SUM(<input type="text" name="text16">) FROM merchandise
 								</div>		
 								<div id="D_MAX">
-										SELECT MAX(<input type="text" name="text17"><br>)  FROM merchandise
+										SELECT MAX(<input type="text" name="text17">) FROM merchandise
 								</div>		
 								<div id="D_MIN">
-										SELECT MIN(<input type="text" name="text18"><br>)  FROM merchandise
+										SELECT MIN(<input type="text" name="text18">) FROM merchandise
 								</div>		
 								<div id="D_AVG">
-										SELECT AVG(<input type="text" name="text19"><br>)  FROM merchandise
+										SELECT AVG(<input type="text" name="text19">) FROM merchandise
 								</div>		
 								<div id="D_HAVING">
-										如果被 SELECT 的只有函數欄， 那就不需要 GROUP BY 子句<br>
+										(如果被 SELECT 的只有函數欄， 那就不需要 GROUP BY 子句)<br>
 										SELECT <input type="text" name="text20"><br> 
 										FROM <input type="text" name="text21"><br> 
 										GROUP BY <input type="text" name="text22"><br> 
