Revise code a little

--- a/shoppingmall.html
+++ b/shoppingmall.html
@@ -8,10 +8,10 @@
 
         <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
         <script>
-			imgSrc=new Array()
-			imgSrc[0]="img/0.jpg"
-			imgSrc[1]="img/1.jpg"
-			imgSrc[2]="img/2.png"
+			imgSrc=new Array();
+			imgSrc[0]="img/0.jpg";
+			imgSrc[1]="img/1.jpg";
+			imgSrc[2]="img/2.png";
 
 			
 			window.onload = function() { // initially, hide the div for later display
